Fix invisible toolbar overlay bug

--- a/client/src/components/color-selector/ColorSelector.styl
+++ b/client/src/components/color-selector/ColorSelector.styl
@@ -1,15 +1,11 @@
 .ColorSelector
-    position absolute
-    bottom rhythm--half
-    right 0
-
     &-picker
         padding-left rhythm--half
 
     &-swatch
         position absolute
         border-radius 0.4rem
-        right 100%
+        right 0
         bottom 0
         transform-origin right center
         transition transform 0.15s ease-in-out
