--- a/client/src/components/layers/Layers.styl
+++ b/client/src/components/layers/Layers.styl
@@ -10,12 +10,19 @@
         position absolute
         top 0
         right 100%
+        width 0
+        bottom rhythm--half
         margin-right rhythm--half
 
         display flex
-        height 100%
         flex-direction column
+        justify-content flex-end
         z-index 0
+
+    &-toggle
+        position absolute
+        top 0
+        right 0
 
     &-spacer
         flex-grow 1
