--- a/client/src/components/toolbar/Toolbar.styl
+++ b/client/src/components/toolbar/Toolbar.styl
@@ -1,12 +1,16 @@
 .Toolbar
     position absolute
-    top rhythm--half
+    top 0
     left rhythm--half
     bottom rhythm--half
-    width auto
+    width 0
     display flex
     flex-direction column
     z-index 1
+
+    &-item
+        width 4.8rem
+        position relative
 
     &-spacer
         flex-grow 1
@@ -14,6 +18,7 @@
     &-tool
         font-size 2rem
         border-bottom-width 0
+        width auto
 
         & + &
             border-top-width 0
